--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@ body {
     color: #22D4FD;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     font-style: normal;
     
@@ -38,15 +38,16 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 5% 8%;
+    gap: 82px;
    
 }
 .apresentacao__conteudo {
-    width: 615px;
-    height: 482px;
+    width: 50%;
+    /*height: 482px;*/
 }
 .apresentacao__conteudo__titulo {
     color: #007bff;
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: "Krona One", sans-serif;
     font-weight: 400;
     font-style: normal;  
@@ -57,7 +58,7 @@ body {
 }
 .apresentacao__conteudo__texto {
     color: #007bff;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -74,20 +75,20 @@ body {
 .apresentacao__links__subtitulo {
     font-family: "Krona One", sans-serif;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-style: normal;
     color: #0000cd;
 }
-.apresentacao__links__link {
+.apresentacao__links__navegacao {
     /*background-color: #22d4fd;*/
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px groove #22d4fd;
-    width: 280px;
+    border: 2px solid #22d4fd;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0px;
     text-decoration: none;
@@ -100,9 +101,9 @@ body {
     background-color: #272727;
     cursor: pointer;
  }
- .imagem {
-    height: 600px;
-    width: 500px;
+ .apresentacao__imagem {
+    /*height: 600px;*/
+    width: 50%;
     justify-content: center;
     align-items: center;
 }
@@ -111,7 +112,7 @@ body {
     color: #000000;
     text-align: center;
     font-family: "Montserrat", sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     font-style: normal;
     padding: 34px;    
@@ -122,3 +123,24 @@ body {
     background-color: #272727;
     cursor: pointer;
  }
+
+@media (max-width: 1200px) {
+    .cabecalho {
+        padding: 5%;
+    }
+    .cabecalho__menu {
+        justify-content: center;
+    }
+    .apresentacao {
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .apresentacao__conteudo {
+        width: auto;    
+    }
+    .rodape__menu__link {
+        font-size: 1.1rem;
+        font-weight: 250;
+        padding: 2%;
+    }
+}
